src/desafios/desafio-11/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: financial
  labels:
    name: financial
    environment: production
    app.kubernetes.io/part-of: financial-app
    app: financial-app
    managed-by: kustomize
    project: devops-lab
    challenge: "11"
